--- a/src/styles/videoCard.module.css
+++ b/src/styles/videoCard.module.css
@@ -21,3 +21,19 @@
 .card div {
     height: 70%;
 }
+
+
+@media (max-width:425px)
+{
+    .card{
+    height: 180px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    transition: transform 0.5s;
+    margin-bottom: 20px;
+    margin-left: 50px;
+    box-shadow: 5px 2px 10px lightgray;
+    }
+}
